--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <header>
   <title>Amruta's Portal</title>
-  <link rel="stylesheet" href="C:/Users/Icon/.atom/MY/css/master.css">
+  <link rel="stylesheet" href="css/master.css">
 
 <link rel="Favicon" type="image/x-icon"  href="/nature_icon.ico">
 <link rel="shortcut" type="image/x-icon" href="/nature_icon.ico">
