--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <header>
   <title>Amruta's Portal</title>
-  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="C:/Users/Icon/.atom/MY/images/master.css">
 
 <link rel="Favicon" type="image/x-icon"  href="/nature_icon.ico">
 <link rel="shortcut" type="image/x-icon" href="/nature_icon.ico">
@@ -24,7 +24,7 @@
 
   <h2>Credentials and Portfolio</h2>
 
-  <p><a href = "C:/Users/Icon/.atom/MY/images/resume.html" >My resume</a> | <a href = "https://github.com/amrutap99">My Github </a></p>
+  <p><a href = "https://github.com/amrutap99/amrutap99.github.io/resume.html" >My resume</a> | <a href = "https://github.com/amrutap99">My Github </a></p>
   <h2>Contact</h2>
 
   <p>Email: <a href="mailto:amrutaapatil99@gmail.com" >amrutaapatil99@gmail.com </a></p>
