--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <h2>Credentials and Portfolio</h2>
 
-  <p><a href = "https://github.com/amrutap99/amrutap99.github.io/resume.html" >My resume</a> | <a href = "https://github.com/amrutap99">My Github </a></p>
+  <p><a href = "https://amrutap99.github.io/resume.html" >My resume</a> | <a href = "https://github.com/amrutap99">My Github </a></p>
   <h2>Contact</h2>
 
   <p>Email: <a href="mailto:amrutaapatil99@gmail.com" >amrutaapatil99@gmail.com </a></p>
