--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 
 <body>
-  <img src = "C:/Users/Icon/.atom/MY/images/nature.jpg" width=55% height=55% alt="nature image">
+  <img src = "https://amrutap99.github.io/nature.jpg" width=55% height=55% alt="nature image">
 
   <h1>Amruta's Portal</h1>
   <h2>About me</h2>
