--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <header>
   <title>My Resume</title>
-  <link rel="stylesheet" href="C:/Users/Icon/.atom/MY/css/master.css">
+  <link rel="stylesheet" href=https://amrutap99.github.io/master.css">
   <link rel="Favicon" type="image/x-icon"  href="/nature_icon.ico">
   <link rel="shortcut" type="image/x-icon" href="/nature_icon.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -13,7 +13,7 @@
 </header>
 
 <body>
-  <img src = "C:/Users/Icon/.atom/MY/images/android.jpg" width=55% height=55% alt="nature image">
+  <img src = "https://amrutap99.github.io/android.jpg" width=55% height=55% alt="android image">
 
   <h1>Amruta's Portal</h1>
   <h2>About me</h2>
