--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <header>
   <title>My Resume</title>
-  <link rel="stylesheet" href=https://amrutap99.github.io/master.css">
+  <link rel="stylesheet" href="https://amrutap99.github.io/master.css">
   <link rel="Favicon" type="image/x-icon"  href="/nature_icon.ico">
   <link rel="shortcut" type="image/x-icon" href="/nature_icon.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
